feat(v3.0.0): new architecture (#31)
