# services/backend/src/main/resources/swagger/greenit/inventory.yml
@@ -131,67 +131,3 @@ paths:
         '500':
           $ref: "#/components/responses/InternalServerError"
 
-  /subscribers/{subscriber}/organizations/{organization}/inventories/{inventoryId}/loading:
-    parameters:
-      - $ref: '#/components/parameters/subscriberPathParam'
-      - $ref: '#/components/parameters/organizationPathParam'
-      - $ref: '#/components/parameters/inventoryIdPathParam'
-      - in: header
-        name: Accept-Language
-        schema:
-          type: string
-        description: The number of items to skip before starting to collect the result set
-    post:
-      summary: Launch loading batch
-      operationId: launchLoadingBatch
-      x-custom-role: "hasRole('INVENTORY_WRITE')"
-      tags:
-        - inventory-loading
-      requestBody:
-        required: true
-        content:
-          'application/json':
-            schema:
-              type: array
-              items:
-                $ref: "#/components/schemas/FileDescriptionRest"
-      responses:
-        '202':
-          description: Accepted
-          content:
-            'application/json':
-              schema:
-                type: integer
-                format: int64
-        '400':
-          $ref: "#/components/responses/BadRequestError"
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '500':
-          $ref: "#/components/responses/InternalServerError"
-
-  /subscribers/{subscriber}/organizations/{organization}/inventories/{inventoryId}/evaluation:
-    parameters:
-      - $ref: '#/components/parameters/subscriberPathParam'
-      - $ref: '#/components/parameters/organizationPathParam'
-      - $ref: '#/components/parameters/inventoryIdPathParam'
-    post:
-      summary: Launch evaluation batch
-      operationId: launchEvaluationBatch
-      x-custom-role: "hasRole('INVENTORY_WRITE')"
-      tags:
-        - inventory-evaluation
-      responses:
-        '202':
-          description: Accepted
-          content:
-            'application/json':
-              schema:
-                type: integer
-                format: int64
-        '400':
-          $ref: "#/components/responses/BadRequestError"
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '500':
-          $ref: "#/components/responses/InternalServerError"
